<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.tx.travel</groupId>
    <artifactId>travel-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Travel App - Backend</name>

    <modules>
        <module>travel</module>
        <module>commons</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <version.lombok>1.18.24</version.lombok>
        <version.spring-boot>2.7.0</version.spring-boot>
        <version.plugin.maven-compiler>3.6.2</version.plugin.maven-compiler>
        <version.flyway>8.0.2</version.flyway>
        <version.hibernate>6.0.0.Final</version.hibernate>
        <version.commons.oauth>${project.version}</version.commons.oauth>
        <jjwt.version>0.9.1</jjwt.version>
        <slf4j-api.version>2.0.3</slf4j-api.version>
        <jackson.version>2.13.4.2</jackson.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <spotless-maven-plugin.version>2.27.2</spotless-maven-plugin.version>
        <maven-dependency-plugin.version>3.3.0</maven-dependency-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.tx.travel</groupId>
                <artifactId>commons-oauth</artifactId>
                <version>${version.commons.oauth}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${version.spring-boot}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-core</artifactId>
                <version>${version.flyway}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${version.plugin.maven-compiler}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${version.lombok}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>${spotless-maven-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>spotless</id>
                            <phase>validate</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <java>
                            <googleJavaFormat>
                                <version>1.7</version>
                                <style>GOOGLE</style>
                            </googleJavaFormat>
                        </java>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${maven-dependency-plugin.version}</version>
                    <configuration>
                        <ignoredDependencies>
                            <ignoredDependency>org.projectlombok:lombok</ignoredDependency>
                            <ignoredDependency>org.springframework.*:*</ignoredDependency>
                            <ignoredDependency>org.springframework:*</ignoredDependency>
                            <ignoredDependency>org.mariadb.jdbc:mariadb-java-client</ignoredDependency>
                            <ignoredDependency>com.tx.travel:commons-oauth</ignoredDependency>
                        </ignoredDependencies>
                    </configuration>
                    <executions>
                        <execution>
                            <id>analyze</id>
                            <goals>
                                <goal>analyze-only</goal>
                            </goals>
                            <configuration>
                                <failOnWarning>true</failOnWarning>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
